[package]
name = "cloudprint"
version = "0.1.0"
authors = ["Jacob Romer <jacob.romer@symbiont.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dither = "1.3.7"
rand = "0.7.3"
image = "0.23.3"
tempfile = "3.1.0"
serial = "0.4.0"
serial-unix = "0.4.0"
serialport = { version = "3.3.0", default-features = false}
